--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,11 +1,16 @@
-<h1>Edit Post</h1>
+<%- include('partials/header.ejs') %>
+<div class="editContainer">
 
-<form action="/update/<%= post.id %>" method="POST">
-  <label for="title">Title:</label>
-  <input type="text" id="title" name="title" value="<%= post.title %>" required>
+    <h1>Edit Post</h1>
+    <form action="/update/<%= post.id %>" method="POST">
+      <label for="title">Title:</label>
+      <input type="text" id="title" name="title" value="<%= post.title %>" required>
+    
+      <label for="content">Content:</label>
+      <textarea id="content" name="content" required><%= post.content %></textarea>
+    
+      <button type="submit">Update Post</button>
+    </form>
+</div>
 
-  <label for="content">Content:</label>
-  <textarea id="content" name="content" required><%= post.content %></textarea>
-
-  <button type="submit">Update Post</button>
-</form>
+<%- include('partials/footer.ejs') %>
